# PC2-DS

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml
api/controllers/: auth.py  books.py  catalog.py  users.py
api/core/: db_conn.py  security.py
api/dtos/: book_dto.py  loan_dto.py  login_dto.py
api/repositories/: user_repository.py
api/repositories/exports/: di.py
api/services/: auth_service.py  book_service.py
api/services/exports/: di.py
core/: security.py  validators.py
db/: config.py  connection.py
db/models/: autor.py  ejemplar.py  genero.py  libro.py  prestamo.py  usuario.py
db/schemas/: libro.py
docs/: README.md  deployment.md  dtos.md  endpoints.md
domain/: book.py  book_copy.py  exceptions.py  loan.py  user.py
domain/builders/: book_builder.py
domain/enums/: estado_ejemplares.py  estado_prestamos.py  roles_usuario.py
migrations/: env.py
migrations/versions/: 29beb8a7c75d_generacion_db_con_libros_y_ejemplares.py  ac4824f65628_añadimiento_de_tabla_de_usuarios.py  f140554ef40e_crear_tablas_iniciales.py
models/: book.py  user.py
repositories/: book_copy_repository.py  book_repository.py  loan_repository.py  user_repository.py
repositories/exports/: di.py  factory.py
services/: auth_service.py  book_service.py
services/exports/: di.py
tests/: test_auth_service.py  test_book_repository.py  test_endpoints.py
