[project]
name = "backendlookowl"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=5.0.0",
    "fastapi[standard]>=0.136.1",
    "psycopg[binary,pool]>=3.3.3",
    "pydantic>=2.13.3",
    "pydantic-settings>=2.14.0",
    "pyjwt>=2.12.1",
    "pytest>=9.0.3",
    "pytest-anyio",
    "python-dotenv>=1.2.2",
    "sqlalchemy>=2.0.49",
]
